@@ -1,3 +1,1 @@
---enable-preview
---show-version
 -Djava.awt.headless=true
